--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,6 +13,7 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -28,6 +29,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -38,7 +40,10 @@ android {
         }
     }
 }
-
+dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1' // Add multidex dependency
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4' // Add desugaring library
+}
 flutter {
     source = "../.."
 }
