--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   intl:
   sqflite: ^2.4.1
   path:
-  flutter_local_notifications: ^14.0.0
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.9.0
 
 dev_dependencies:
   flutter_test:
